# muninn

./: .gitignore  .sops.yaml  Cargo.toml  README.md  install.sh
.angreal/: task_bench.py  task_build.py  task_ci.py  task_dev.py  task_test.py  utils.py
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
.metis/: .index-dirty  code-index-hashes.json  code-index-symbols.json  code-index.md  config.toml  vision.md
.metis/adrs/: PROJEC-A-0001.md  PROJEC-A-0002.md  PROJEC-A-0003.md
.metis/archived/backlog/bugs/: PROJEC-T-0045.md
.metis/archived/backlog/features/: PROJEC-T-0042.md  PROJEC-T-0063.md  PROJEC-T-0079.md
.metis/archived/backlog/tech-debt/: PROJEC-T-0076.md
.metis/archived/initiatives/PROJEC-I-0009/: initiative.md
.metis/archived/initiatives/PROJEC-I-0010/: initiative.md
.metis/archived/initiatives/PROJEC-I-0010/tasks/: PROJEC-T-0046.md  PROJEC-T-0047.md  PROJEC-T-0048.md  PROJEC-T-0049.md  PROJEC-T-0050.md  PROJEC-T-0051.md  PROJEC-T-0052.md  PROJEC-T-0053.md  PROJEC-T-0054.md  PROJEC-T-0055.md  PROJEC-T-0056.md  PROJEC-T-0057.md  PROJEC-T-0058.md  PROJEC-T-0059.md  PROJEC-T-0060.md  PROJEC-T-0061.md
.metis/archived/initiatives/PROJEC-I-0011/: initiative.md
.metis/archived/initiatives/PROJEC-I-0011/tasks/: PROJEC-T-0064.md  PROJEC-T-0065.md  PROJEC-T-0066.md  PROJEC-T-0067.md  PROJEC-T-0068.md  PROJEC-T-0069.md  PROJEC-T-0070.md  PROJEC-T-0071.md  PROJEC-T-0072.md  PROJEC-T-0073.md  PROJEC-T-0074.md  PROJEC-T-0075.md
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0001/: initiative.md
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0001/tasks/: PROJEC-T-0001.md  PROJEC-T-0002.md  PROJEC-T-0003.md  PROJEC-T-0004.md  PROJEC-T-0005.md  PROJEC-T-0006.md  PROJEC-T-0007.md  PROJEC-T-0008.md
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0002/: initiative.md
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0002/tasks/: PROJEC-T-0009.md  PROJEC-T-0010.md  PROJEC-T-0011.md  PROJEC-T-0012.md  PROJEC-T-0013.md  PROJEC-T-0014.md
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0003/: initiative.md
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0003/tasks/: PROJEC-T-0020.md  PROJEC-T-0021.md  PROJEC-T-0022.md  PROJEC-T-0023.md  PROJEC-T-0024.md  (+2 more)
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0004/: initiative.md
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0005/: initiative.md
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0006/: initiative.md
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0007/: initiative.md
.metis/archived/strategies/NULL/initiatives/PROJEC-I-0008/: initiative.md
.metis/backlog/bugs/: PROJEC-T-0045.md
.metis/backlog/features/: PROJEC-T-0042.md  PROJEC-T-0062.md  PROJEC-T-0063.md  PROJEC-T-0078.md  PROJEC-T-0079.md
.metis/backlog/tech-debt/: PROJEC-T-0076.md  PROJEC-T-0077.md
.metis/initiatives/PROJEC-I-0009/: initiative.md
.metis/initiatives/PROJEC-I-0010/: initiative.md
.metis/initiatives/PROJEC-I-0010/tasks/: PROJEC-T-0047.md  PROJEC-T-0048.md  PROJEC-T-0057.md  PROJEC-T-0060.md
.metis/initiatives/PROJEC-I-0011/: initiative.md
.metis/initiatives/PROJEC-I-0011/tasks/: PROJEC-T-0064.md  PROJEC-T-0064.md.new  PROJEC-T-0065.md  PROJEC-T-0065.md.new  PROJEC-T-0066.md  PROJEC-T-0066.md.new  PROJEC-T-0067.md  PROJEC-T-0067.md.new  PROJEC-T-0068.md  PROJEC-T-0068.md.new  PROJEC-T-0069.md  PROJEC-T-0070.md  PROJEC-T-0071.md  PROJEC-T-0072.md  PROJEC-T-0073.md  PROJEC-T-0074.md  PROJEC-T-0075.md
.metis/strategies/NULL/initiatives/PROJEC-I-0010/tasks/: PROJEC-T-0046.md  PROJEC-T-0049.md  PROJEC-T-0050.md  PROJEC-T-0051.md  PROJEC-T-0052.md  PROJEC-T-0053.md  PROJEC-T-0054.md  PROJEC-T-0055.md  PROJEC-T-0056.md  PROJEC-T-0058.md  PROJEC-T-0059.md  PROJEC-T-0061.md
crates/muninn/: Cargo.toml
crates/muninn-core/: Cargo.toml
crates/muninn-core/src/: daemon.rs  error.rs  lib.rs  llm.rs  mcp.rs  types.rs
crates/muninn-graph/: Cargo.toml
crates/muninn-graph/src/: builder.rs  doc_store.rs  edges.rs  embeddings.rs  graph.rs  lib.rs  module_path.rs  parser.rs  scip_ingest.rs  store.rs  symbols.rs  watcher.rs
crates/muninn-graph/src/lang/: mod.rs  python.rs  rust.rs
crates/muninn-graph/src/queries/: c_symbols.scm  cpp_symbols.scm  python_symbols.scm  rust_symbols.scm
crates/muninn-graph/src/registry/: crates_io.rs  indexer.rs  llmstxt.rs  mod.rs  py_indexer.rs  pydoc.rs  pypi.rs  rustdoc.rs
crates/muninn-graph/tests/: doc_indexing.rs  integration.rs
crates/muninn-narsil-vendor/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE.md
crates/muninn-narsil-vendor/src/: lib.rs  parser.rs
crates/muninn-rlm/: Cargo.toml  TESTING.md
crates/muninn-rlm/src/: anthropic.rs  backend.rs  context.rs  doc_tools.rs  error.rs  fs.rs  fs_tools.rs  graph_tools.rs  groq.rs  lib.rs  mcp.rs  mcp_engine_server.rs  memory_tools.rs  oauth.rs  ollama.rs  passthrough.rs  prompts.rs  proxy.rs  repl_tools.rs  router.rs  subquery.rs  token_manager.rs  tools.rs  types.rs
crates/muninn-rlm/src/engine/: budget.rs  context.rs  dir_tree.rs  mod.rs  muninn_engine_impl.rs  tests.rs  tool_executor.rs  trace.rs
crates/muninn-rlm/src/testing/: fixtures.rs  mock_backend.rs  mock_server.rs  mod.rs
crates/muninn-rlm/tests/: integration.rs
crates/muninn-tracing/: Cargo.toml
crates/muninn-tracing/examples/: demo_trace.rs
crates/muninn-tracing/src/: collector.rs  lib.rs  types.rs  writer.rs
crates/muninn/examples/: bench_hook.rs
crates/muninn/src/: config.rs  hook.rs  install.rs  main.rs  session.rs
crates/muninn/tests/: daemon_lifecycle.rs  hook_failure_modes.rs  mcp_protocol.rs  routing.rs  uat.rs  user_prompt_submit.rs
crates/muninn/tests/common/: mod.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tests/tests/: cross_crate.rs
docs/: mcp-tools.md  migration-proxy-to-hook.md
plugins/muninn-cc/: README.md
plugins/muninn-cc/.claude-plugin/: plugin.json
plugins/muninn-cc/hooks/: hooks.json  pre-tool-use.sh  user-prompt-submit.sh
scripts/: uat.sh
tests/secrets/: .gitignore  README.md  uat.enc.yaml
tools/: capture_proxy.py
(+22 files in other folders)
