[package]
name = "muninn-graph"
description = "Code graph infrastructure - parsing, symbols, and storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Code-graph extraction — vendored from narsil-mcp.
# Replaces our previous hand-written tree-sitter extractors and the
# scip ingest. See crates/muninn-narsil-vendor/NOTICE.md for provenance.
muninn-narsil-vendor = { path = "../muninn-narsil-vendor" }

# Graph storage
graphqlite = { version = "0.3", features = ["bundled-extension"] }
rusqlite = "0.31"  # Same version as graphqlite uses

# File watching
notify = "6"
notify-debouncer-mini = "0.4"
ignore = "0.4"

# HTTP client for registry APIs
# rustls-tls (not native-tls) so we don't drag in openssl-sys —
# blocks cross-compiling to aarch64-unknown-linux-gnu in CI.
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Archive extraction
flate2 = "1.0"
tar = "0.4"
zip = "2.2"

# Rustdoc JSON parsing
rustdoc-types = "0.56"

# Async runtime (needed for reqwest)
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.10"
serial_test = "3"
