[package]
name = "muninn-tests"
description = "Cross-crate integration tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# All crates for cross-crate testing
muninn-graph.workspace = true
muninn-rlm.workspace = true

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
tempfile = "3"
